plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.sonarr: "semver:~1"
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostname: plex-k3os
      containers:
      - name: plex
        image: plexinc/pms-docker:1.19.4.2935-79e214ead
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        volumeMounts:
        - name: plex-config
          mountPath: "/config"
        - name: plex-transcode
          mountPath: "/transcode"
        - name: media
          mountPath: "/data"
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-plex-config
      - name: plex-transcode
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-plex-transcode
      - name: media
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-media
