plex/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-nodeport-service
  namespace: media
spec:
  type: NodePort
  ports:
  - port: 32400
    targetPort: 32400
    protocol: TCP
    name: http
  selector:
    run: plex
