plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 32400
    protocol: TCP
    name: http
  selector:
    app: plex
