plex/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: plex.toothyshouse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: plex-service
          servicePort: 80
